contracts/freeze/tests/snapshots/gas_snap__freeze_borrower_until.snap
---
source: contracts/freeze/tests/gas_snap.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "freeze_borrower_until",
    cpu_instructions: 98932,
    memory_bytes: 14826,
}
