contracts/freeze/tests/snapshots/gas_snap__freeze_borrower_until_24h.snap
---
source: contracts/freeze/tests/gas_snap.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "freeze_borrower_until_24h",
    cpu_instructions: 90178,
    memory_bytes: 14137,
}
