contracts/freeze/tests/snapshots/gas_snap__freeze_credit_line.snap
---
source: contracts/freeze/tests/gas_snap.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "freeze_credit_line",
    cpu_instructions: 122473,
    memory_bytes: 17765,
}
