contracts/freeze/tests/snapshots/gas_snap__freeze_credit_line_compliance.snap
---
source: contracts/freeze/tests/gas_snap.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "freeze_credit_line_compliance",
    cpu_instructions: 122473,
    memory_bytes: 17765,
}
