contracts/freeze/tests/snapshots/gas_snap__freeze_credit_line_idempotent.snap
---
source: contracts/freeze/tests/gas_snap.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "freeze_credit_line_idempotent",
    cpu_instructions: 119611,
    memory_bytes: 16849,
}
