contracts/freeze/tests/snapshots/gas_snap__freeze_draws_risk_investigation.snap
---
source: contracts/freeze/tests/gas_snap.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "freeze_draws_risk_investigation",
    cpu_instructions: 89229,
    memory_bytes: 13363,
}
