contracts/freeze/tests/snapshots/gas_snap__get_borrower_frozen_until_some.snap
---
source: contracts/freeze/tests/gas_snap.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "get_borrower_frozen_until_some",
    cpu_instructions: 50783,
    memory_bytes: 8028,
}
